--- a/index.html
+++ b/index.html
@@ -43,6 +43,20 @@
             color: #333;
             box-sizing: border-box;
         }
+        button {
+            padding: 12px 30px;
+            background-color: coral;
+            color: white;
+            border: none;
+            cursor: pointer;
+            border-radius: 4px;
+            font-size: 16px;
+            display: block;
+            margin: 20px auto;
+        }
+        button:hover {
+            background-color: darkred;
+        }
         .comment {
             margin-bottom: 20px;
         }
@@ -70,15 +84,44 @@
 <body>
 
     <!-- Version number -->
-    <div class="version-number">v21.0</div>
+    <div class="version-number">v22.0</div>
 
     <!-- Master heading and instructions -->
     <h1>ClearMap Cybersecurity Gap Analysis</h1>
     <h2>CIS Control 1: Inventory and Control of Enterprise Assets</h2>
-    <p>Please answer the following questions to help us assess your current security posture for CIS Control 1. You can also add comments to provide additional context.</p>
 
-    <!-- The form structure -->
+    <!-- General Information Section -->
     <form id="control1Form">
+        <div>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" class="input-field" required>
+        </div>
+
+        <div>
+            <label for="companyName">Company Name:</label>
+            <input type="text" id="companyName" name="companyName" class="input-field" required>
+        </div>
+
+        <div>
+            <label for="numberOfUsers">Number of Users:</label>
+            <input type="number" id="numberOfUsers" name="numberOfUsers" class="input-field" required>
+        </div>
+
+        <div>
+            <label for="email">Email Address:</label>
+            <input type="email" id="email" name="email" class="input-field" required>
+        </div>
+
+        <div>
+            <label for="gapInterest">What interested you in a gap analysis?</label>
+            <input type="text" id="gapInterest" name="gapInterest" class="input-field">
+        </div>
+
+        <div class="comment">
+            <label for="mainDrivers">What are your main drivers?</label>
+            <textarea id="mainDrivers" name="mainDrivers" class="input-field" placeholder="Describe your main drivers here..."></textarea>
+        </div>
+
         <!-- Dropdown Question: Are you compliant with one or more frameworks? -->
         <div>
             <label for="frameworkCompliance"><span class="question-number">1)</span> Are you compliant with one or more cybersecurity frameworks such as Cyber Essentials, NIST, ISO 27001, etc.?</label>
@@ -97,6 +140,9 @@
 
     </form>
 
+    <!-- Placeholder for the graph -->
+    <canvas id="radialChart" width="400" height="400"></canvas>
+
     <script>
     // Function to show/hide the framework details textbox based on dropdown selection
     function toggleFrameworkDetails() {
@@ -110,223 +156,32 @@
         }
     }
 
-    </script>
-</body>
-</html>
-
-
-        <!-- Comments for Question 1.1 -->
-        <div class="comment">
-            <label for="q1Comments">Add comments or context to your answer (optional):</label>
-            <textarea id="q1Comments" name="q1Comments" class="input-field" placeholder="Provide additional context here..."></textarea>
-        </div>
-
-        <!-- Question 1.2 -->
-        <div>
-            <label for="q2"><span class="question-number">2)</span> Do you maintain an updated inventory of all hardware assets?</label>
-            <select id="q2" name="q2" class="input-field">
-                <option value="1">We have no centralised inventory of hardware assets.</option>
-                <option value="2">We maintain a basic, informal list of some hardware assets.</option>
-                <option value="3">We maintain an inventory, but it is updated only during periodic audits.</option>
-                <option value="4">We maintain an automated, centralised hardware inventory.</option>
-                <option value="5">We have a comprehensive, automated inventory that tracks all hardware assets in real-time.</option>
-            </select>
-        </div>
-
-        <!-- Comments for Question 1.2 -->
-        <div class="comment">
-            <label for="q2Comments">Add comments or context to your answer (optional):</label>
-            <textarea id="q2Comments" name="q2Comments" class="input-field" placeholder="Provide additional context here..."></textarea>
-        </div>
-
-        <!-- Question 1.3 -->
-        <div>
-            <label for="q3"><span class="question-number">3)</span> Do you have policies for managing unauthorised hardware?</label>
-            <select id="q3" name="q3" class="input-field">
-                <option value="1">We do not have processes to detect or manage unauthorised hardware.</option>
-                <option value="2">We have ad-hoc policies, but they are rarely enforced.</option>
-                <option value="3">We detect unauthorised hardware, but enforcement is inconsistent.</option>
-                <option value="4">We detect and respond to unauthorised hardware through automated tools.</option>
-                <option value="5">We have a fully automated system that detects, isolates, and removes unauthorised hardware in real-time.</option>
-            </select>
-        </div>
-
-        <!-- Comments for Question 1.3 -->
-        <div class="comment">
-            <label for="q3Comments">Add comments or context to your answer (optional):</label>
-            <textarea id="q3Comments" name="q3Comments" class="input-field" placeholder="Provide additional context here..."></textarea>
-        </div>
-
-        <!-- Question 1.4 -->
-        <div>
-            <label for="q4"><span class="question-number">4)</span> Do you have a documented onboarding process for hardware?</label>
-            <select id="q4" name="q4" class="input-field">
-                <option value="1">There is no formal onboarding process for new hardware.</option>
-                <option value="2">New hardware is configured manually, with no formal documentation or security check.</option>
-                <option value="3">We have a partially documented process that includes security checks for new hardware.</option>
-                <option value="4">We have a documented and secure onboarding process for most hardware.</option>
-                <option value="5">We have a fully documented and enforced onboarding process for all hardware, including security checks.</option>
-            </select>
-        </div>
-
-        <!-- Comments for Question 1.4 -->
-        <div class="comment">
-            <label for="q4Comments">Add comments or context to your answer (optional):</label>
-            <textarea id="q4Comments" name="q4Comments" class="input-field" placeholder="Provide additional context here..."></textarea>
-        </div>
-
-        <button type="submit">Submit</button>
-    </form>
-
-    <!-- Placeholder for the report -->
-    <div id="reportContainer"></div>
-
-   <!-- Graph section -->
-    <canvas id="radialChart" width="400" height="400"></canvas>
-
-    <script>
-    // Function to change the background color of the dropdown based on the selected value
-    function setDropdownColor() {
-        var dropdown = document.getElementById("frameworkCompliance");
-        if (dropdown.value === "No") {
-            dropdown.classList.remove("green-option");
-            dropdown.classList.add("red-option");
-        } else if (dropdown.value === "Yes") {
-            dropdown.classList.remove("red-option");
-            dropdown.classList.add("green-option");
-        }
-    }
-
     document.getElementById('control1Form').addEventListener('submit', function (e) {
         e.preventDefault(); // Prevent form refresh
 
-        // Capture the dropdown answer for frameworks
+        // Capture the form values (General Info + Control 1)
+        const name = document.getElementById('name').value;
+        const companyName = document.getElementById('companyName').value;
+        const numberOfUsers = document.getElementById('numberOfUsers').value;
+        const email = document.getElementById('email').value;
+        const gapInterest = document.getElementById('gapInterest').value;
+        const mainDrivers = document.getElementById('mainDrivers').value;
         const frameworkCompliance = document.getElementById('frameworkCompliance').value;
         const frameworkDetails = document.getElementById('frameworkDetails').value;
-        const q1Comments = document.getElementById('q1Comments').value;
-        const q2 = document.getElementById('q2').value;
-        const q2Comments = document.getElementById('q2Comments').value;
-        const q3 = document.getElementById('q3').value;
-        const q3Comments = document.getElementById('q3Comments').value;
-        const q4 = document.getElementById('q4').value;
-        const q4Comments = document.getElementById('q4Comments').value;
 
-        // Calculate risk scores and call displayReport() and generateChart()
-        let riskScore2 = parseInt(q2); // Dropdown values are already 1-5
-        let riskScore3 = parseInt(q3);
-        let riskScore4 = parseInt(q4);
-
-        // Call the report and chart generation functions
-        displayReport(riskScore2, riskScore3, riskScore4, q2, q3, q4);
-        generateChart([riskScore2, riskScore3, riskScore4]);
-    });
-
-    // Display the report after form submission
-    function displayReport(riskScore2, riskScore3, riskScore4, q2, q3, q4) {
-        const reportHTML = `
-            <table>
-              <thead>
-                <tr>
-                  <th>Risk Score</th>
-                  <th>Area</th>
-                  <th>Requirement</th>
-                  <th>Current Position</th>
-                  <th>Advisory</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr style="background-color: ${getBackgroundColor(riskScore2)};">
-                  <td>${riskScore2}</td>
-                  <td>Inventory Management</td>
-                  <td>A comprehensive, automated inventory tool must be in place to track all assets.</td>
-                  <td>${q2}</td>
-                  <td>${generateAdvisory(riskScore2, 'inventory')}</td>
-                </tr>
-                <tr style="background-color: ${getBackgroundColor(riskScore3)};">
-                  <td>${riskScore3}</td>
-                  <td>Unauthorised Hardware</td>
-                  <td>All enterprise assets should be clearly identified and managed.</td>
-                  <td>${q3}</td>
-                  <td>${generateAdvisory(riskScore3, 'hardware')}</td>
-                </tr>
-                <tr style="background-color: ${getBackgroundColor(riskScore4)};">
-                  <td>${riskScore4}</td>
-                  <td>Onboarding Process</td>
-                  <td>A secure, documented onboarding process must be enforced for all hardware assets.</td>
-                  <td>${q4}</td>
-                  <td>${generateAdvisory(riskScore4, 'onboarding')}</td>
-                </tr>
-              </tbody>
-            </table>
-        `;
-
-        document.getElementById("reportContainer").innerHTML = reportHTML;
-    }
-
-        // Example to log or display the data, you can use these variables in your report
+        console.log("Name:", name);
+        console.log("Company Name:", companyName);
+        console.log("Number of Users:", numberOfUsers);
+        console.log("Email:", email);
+        console.log("Gap Interest:", gapInterest);
+        console.log("Main Drivers:", mainDrivers);
         console.log("Framework Compliance:", frameworkCompliance);
         console.log("Framework Details:", frameworkDetails);
-    
-// Function to generate in-depth advisories based on the risk score
-    function generateAdvisory(score, area) {
-        let advisory = '';
-        if (score === 1) {
-            advisory = `You currently have significant gaps in ${area}. Immediate action is needed. Consider adopting industry-standard tools to manage ${area} effectively and reduce risk.`;
-        } else if (score === 2) {
-            advisory = `Your ${area} process needs improvement. Consider implementing automated tools to track and manage assets more efficiently, and ensure that they are regularly updated.`;
-        } else if (score === 3) {
-            advisory = `You are on the right path with your ${area} management, but there is room for improvement. Periodic reviews and better tools will help keep the system robust.`;
-        } else if (score === 4) {
-            advisory = `Your ${area} management is solid, but there are some areas where automation or additional monitoring tools could help further strengthen your security.`;
-        } else if (score === 5) {
-            advisory = `You have excellent ${area} management. Continue monitoring and maintaining your current system to ensure it remains effective.`;
-        }
-        return advisory;
-    }
 
-    // Function to get background color based on risk score
-    function getBackgroundColor(score) {
-        if (score === 1) return "#FFCCCB"; // Bright red
-        if (score === 2) return "#FF5733"; // Red amber
-        if (score === 3) return "#FFC107"; // Amber
-        if (score === 4) return "#90EE90"; // Amber green
-        if (score === 5) return "#32CD32"; // Green
-    }
+        // Display a thank you message
+        alert("Thank you for your submission! We are working on your report.");
+    });
 
-    // Generate the radar chart based on the risk scores
-    function generateChart(data) {
-        // Colors from red (low score) to green (high score)
-        const colors = data.map(score => getBackgroundColor(score)); 
-
-        const chartData = {
-            labels: ['Inventory', 'Unauthorised Hardware', 'Onboarding'],
-            datasets: [{
-                label: 'Compliance Score',
-                data: data,
-                backgroundColor: colors, // Apply different colors per data point
-                borderColor: '#000',
-                borderWidth: 1
-            }]
-        };
-
-        const config = {
-            type: 'radar',
-            data: chartData,
-            options: {
-                scales: {
-                    r: {
-                        min: 0,
-                        max: 5
-                    }
-                }
-            }
-        };
-
-        const radialChart = new Chart(
-            document.getElementById('radialChart'),
-            config
-        );
-    }
     </script>
 </body>
 </html>
