--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
             max-width: 800px;
             margin: 0 auto;
         }
-        h1 {
+        h1, h2 {
             color: coral;
         }
-        h2 {
+        h3 {
             color: teal;
+            margin-bottom: 15px;
         }
         p, label {
             color: #333;
@@ -42,6 +43,9 @@
             border-radius: 4px;
             color: #333;
             box-sizing: border-box;
+        }
+        .form-section {
+            margin-bottom: 40px;
         }
         button {
             padding: 12px 30px;
@@ -78,52 +82,50 @@
         select.green-option {
             background-color: #90EE90; /* Green for "Yes (please enter below)" */
         }
-
     </style>
 </head>
 <body>
 
     <!-- Version number -->
-    <div class="version-number">v22.0</div>
+    <div class="version-number">v23.0</div>
 
-    <!-- Master heading and instructions -->
+    <!-- Master heading -->
     <h1>ClearMap Cybersecurity Gap Analysis</h1>
-    <h2>CIS Control 1: Inventory and Control of Enterprise Assets</h2>
 
     <!-- General Information Section -->
+    <h3>General Information</h3>
     <form id="control1Form">
-        <div>
+
+        <div class="form-section">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" class="input-field" required>
         </div>
 
-        <div>
+        <div class="form-section">
             <label for="companyName">Company Name:</label>
             <input type="text" id="companyName" name="companyName" class="input-field" required>
         </div>
 
-        <div>
+        <div class="form-section">
             <label for="numberOfUsers">Number of Users:</label>
             <input type="number" id="numberOfUsers" name="numberOfUsers" class="input-field" required>
         </div>
 
-        <div>
+        <div class="form-section">
             <label for="email">Email Address:</label>
             <input type="email" id="email" name="email" class="input-field" required>
         </div>
 
-        <div>
-            <label for="gapInterest">What interested you in a gap analysis?</label>
-            <input type="text" id="gapInterest" name="gapInterest" class="input-field">
+        <div class="form-section">
+            <label for="gapInterest">What interested you in a gap analysis? (e.g., compliance, best practice, third-party request)</label>
+            <textarea id="gapInterest" name="gapInterest" class="input-field" placeholder="What are your drivers?" required></textarea>
         </div>
 
-        <div class="comment">
-            <label for="mainDrivers">What are your main drivers?</label>
-            <textarea id="mainDrivers" name="mainDrivers" class="input-field" placeholder="Describe your main drivers here..."></textarea>
-        </div>
+        <!-- CIS Control 1 Section -->
+        <h2>CIS Control 1: Inventory and Control of Enterprise Assets</h2>
 
         <!-- Dropdown Question: Are you compliant with one or more frameworks? -->
-        <div>
+        <div class="form-section">
             <label for="frameworkCompliance"><span class="question-number">1)</span> Are you compliant with one or more cybersecurity frameworks such as Cyber Essentials, NIST, ISO 27001, etc.?</label>
             <select id="frameworkCompliance" name="frameworkCompliance" class="input-field" onchange="toggleFrameworkDetails()">
                 <option value="" disabled selected>Select an option</option>
@@ -136,6 +138,40 @@
         <div class="comment" id="frameworkDetailsContainer" style="display:none;">
             <label for="frameworkDetails">Please list the frameworks:</label>
             <textarea id="frameworkDetails" name="frameworkDetails" class="input-field" placeholder="List your frameworks here..."></textarea>
+        </div>
+
+        <!-- Control 1 Questions -->
+        <div class="form-section">
+            <label for="q2"><span class="question-number">2)</span> Do you maintain an updated inventory of all hardware assets?</label>
+            <select id="q2" name="q2" class="input-field">
+                <option value="1">We have no centralised inventory of hardware assets.</option>
+                <option value="2">We maintain a basic, informal list of some hardware assets.</option>
+                <option value="3">We maintain an inventory, but it is updated only during periodic audits.</option>
+                <option value="4">We maintain an automated, centralised hardware inventory.</option>
+                <option value="5">We have a comprehensive, automated inventory that tracks all hardware assets in real-time.</option>
+            </select>
+        </div>
+
+        <div class="form-section">
+            <label for="q3"><span class="question-number">3)</span> Do you have policies for managing unauthorised hardware?</label>
+            <select id="q3" name="q3" class="input-field">
+                <option value="1">We do not have processes to detect or manage unauthorised hardware.</option>
+                <option value="2">We have ad-hoc policies, but they are rarely enforced.</option>
+                <option value="3">We detect unauthorised hardware, but enforcement is inconsistent.</option>
+                <option value="4">We detect and respond to unauthorised hardware through automated tools.</option>
+                <option value="5">We have a fully automated system that detects, isolates, and removes unauthorised hardware in real-time.</option>
+            </select>
+        </div>
+
+        <div class="form-section">
+            <label for="q4"><span class="question-number">4)</span> Do you have a documented onboarding process for hardware?</label>
+            <select id="q4" name="q4" class="input-field">
+                <option value="1">There is no formal onboarding process for new hardware.</option>
+                <option value="2">New hardware is configured manually, with no formal documentation or security check.</option>
+                <option value="3">We have a partially documented process that includes security checks for new hardware.</option>
+                <option value="4">We have a documented and secure onboarding process for most hardware.</option>
+                <option value="5">We have a fully documented and enforced onboarding process for all hardware, including security checks.</option>
+            </select>
         </div>
 
     </form>
@@ -165,18 +201,22 @@
         const numberOfUsers = document.getElementById('numberOfUsers').value;
         const email = document.getElementById('email').value;
         const gapInterest = document.getElementById('gapInterest').value;
-        const mainDrivers = document.getElementById('mainDrivers').value;
         const frameworkCompliance = document.getElementById('frameworkCompliance').value;
         const frameworkDetails = document.getElementById('frameworkDetails').value;
+        const q2 = document.getElementById('q2').value;
+        const q3 = document.getElementById('q3').value;
+        const q4 = document.getElementById('q4').value;
 
         console.log("Name:", name);
         console.log("Company Name:", companyName);
         console.log("Number of Users:", numberOfUsers);
         console.log("Email:", email);
         console.log("Gap Interest:", gapInterest);
-        console.log("Main Drivers:", mainDrivers);
         console.log("Framework Compliance:", frameworkCompliance);
         console.log("Framework Details:", frameworkDetails);
+        console.log("Inventory Score:", q2);
+        console.log("Unauthorised Hardware Score:", q3);
+        console.log("Onboarding Score:", q4);
 
         // Display a thank you message
         alert("Thank you for your submission! We are working on your report.");
